[package]
name = "led_controller"
version = "0.1.0"
authors = ["pdxsam2 <samp2@pdx.edu>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["rt", "stm32f103", "medium"]
